--- a/CRUD_visual_studio/appsettings.json
+++ b/CRUD_visual_studio/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=crud_vs;Uid=root;Pwd=;SSL Mode=None"
+  },
   "AllowedHosts": "*"
 }
