--- a/CRUD_visual_studio/CRUD_visual_studio.csproj
+++ b/CRUD_visual_studio/CRUD_visual_studio.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="MySql.Data" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.27" />
+  </ItemGroup>
 </Project>
