--- a/CRUD_visual_studio/CRUD_visual_studio.csproj
+++ b/CRUD_visual_studio/CRUD_visual_studio.csproj
@@ -6,8 +6,12 @@
 
   <ItemGroup>
     <None Remove="MySql.Data" />
+    <None Remove="Repositories\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.27" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Repositories\" />
   </ItemGroup>
 </Project>
