--- a/CRUD_visual_studio/CRUD_visual_studio.csproj
+++ b/CRUD_visual_studio/CRUD_visual_studio.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <None Remove="MySql.Data" />
     <None Remove="Repositories\" />
+    <None Remove="Node.js" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.27" />
